tests/ui/for/for-loop-bogosity.stderr
error[E0277]: the trait `IntoIterator` is not implemented for `MyStruct`
  --> $DIR/for-loop-bogosity.rs:17:14
   |
LL |     for x in bogus {
   |              ^^^^^ the trait `IntoIterator` is not implemented for `MyStruct`, which is required by `MyStruct: IntoIterator`
   |
   = note: required for `MyStruct` to implement `IntoIterator`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
